--- a/docs/FirstSteps.wiki
+++ b/docs/FirstSteps.wiki
@@ -106,7 +106,7 @@ This is everything we need to do before starting to use JCloudScale in our appli
 
 At this point you should have all necessary maven configuration applied to start using JCloudScale and the project should still successfully run. However, still no actual change in the behavior of the application will occur, as we have not yet designated any cloud objects. Now we will start modifying the code of the application to start using JCloudScale.
 
-The whole scaling concept of JCloudScale works around the Cloud Objects: the instances of classes that do heavy work and are deployed on the cloud hosts. For more details, see [[Documentation#Basic_Usage| documentation]].
+The whole scaling concept of JCloudScale works around the Cloud Objects: the instances of classes that do heavy work and are deployed on the cloud hosts. For more details, see [[Documentation.wiki#Basic_Usage| documentation]].
 
 Selecting the right classes in your application to become Cloud Objects is very important. Keep in mind that Cloud Objects are very expensive to create and invoke. They may look like regular Java objects, but interacting with them from the rest of the application always requires remoting via the message bus.
 
@@ -118,7 +118,7 @@ In case of our sample application it is easy to see that the searcher class (<co
  	...
  }
 
-Now all ''non-static method invocations'' to the instance of the class <code>MyCloudObject</code> will be redirected to the appropriate cloud host and executed there seamlessly for application. Details and limitations of this process are described in [[Documentation#Interacting_With_Cloud_Objects| documentation]].
+Now all ''non-static method invocations'' to the instance of the class <code>MyCloudObject</code> will be redirected to the appropriate cloud host and executed there seamlessly for application. Details and limitations of this process are described in [[Documentation.wiki#Interacting_With_Cloud_Objects| documentation]].
 
 In principle, this is everything we need to do to introduce all necessary cloud-related code to deploy this object to the cloud. However, to make it work properly and not cause any problems for our application, we need to add a few more annotations.
 
@@ -143,7 +143,7 @@ In our demo application we can see that the whole application execution is withi
  }
 
 The last thing we should consider are parameters that are passed into the Cloud Object's method invocations and returned from them. These parameters can be delivered in two ways: '''By-Value''' (when the object is serialized and delivered to the other side, therefore creating the copy of this object there) or '''By-Reference''' (when only the proxy of the object is transferred and both sides can change the object simultaneously and observe results). (see 
-[[Documentation#Passing_Parameters_By-Value_and_By-Reference| documentation]] for details). By default, JCloudScale tries to mimic Java default behavior: passing by-value primitive types and passing by-reference all class types. However, this does not always correspond to the needs of the developers as passing by-reference introduces communication overhead to the application execution. 
+[[Documentation.wiki#Passing_Parameters_By-Value_and_By-Reference| documentation]] for details). By default, JCloudScale tries to mimic Java default behavior: passing by-value primitive types and passing by-reference all class types. However, this does not always correspond to the needs of the developers as passing by-reference introduces communication overhead to the application execution. 
 
 To influence JCloudScale defaults and pass some complex parameters by-value instead of by-reference approach, you can annotate your parameters in method execution with <code>@ByValueParameter</code> annotation:
 
@@ -163,7 +163,7 @@ Or annotate the type itself to always pass it by value.
    ...
  }
 
-'''Note''', that in this case cloud hosts will operate over the copy of the passed parameter and if they change passed object, they will have to provide it back to the client explicitly to see changes there. For more details see [[Documentation#Passing_Parameters_By-Value_and_By-Reference| documentation]]
+'''Note''', that in this case cloud hosts will operate over the copy of the passed parameter and if they change passed object, they will have to provide it back to the client explicitly to see changes there. For more details see [[Documentation.wiki#Passing_Parameters_By-Value_and_By-Reference| documentation]]
 
 '''Congratulations!''' Your application is now cloud-aware. However, for now, instead of using any real cloud, it creates a new Java Virtual Machine to simulate the new cloud host. This approach is called the "'''Local'''" mode of JCloudScale framework, and is used to test the behavior of your application locally before deploying it to the cloud.  As you should have noticed, the running time actually increased. This is caused by the added overhead needed to start virtual machines (one per object), deploy code there and synchronize execution. We will learn how to change the default mode of the JCloudScale framework to actually use the cloud in the following steps.
 The complete code that we should have at this point can be found in [[2.Cloudified.zip| 2.Cloudified]].
@@ -173,7 +173,7 @@ The complete code that we should have at this point can be found in [[2.Cloudifi
 As you saw in the previous sections, using JCloudScale is pretty easy and does not require applying any sophisticated changes to your application. However, when you are not satisfied with the default behavior of JCloudScale, you should be able to change it to fit your needs. To do this, you have to change the default configuration of the JCloudScale framework.
 
 == Specifying configuration ==
-To be as flexible as possible and satisfy most of the users' needs, JCloudScale can be configured in a few different ways. For detailed explanation of different approaches, their benefits and limitations, see [[Documentation#JCloudScale_Configuration| documentation]].
+To be as flexible as possible and satisfy most of the users' needs, JCloudScale can be configured in a few different ways. For detailed explanation of different approaches, their benefits and limitations, see [[Documentation.wiki#JCloudScale_Configuration| documentation]].
 
 In our demo application, we will specify configuration by creating special configuration providing method in the <code>prime.Main</code> class:
 
@@ -209,7 +209,7 @@ You can change that behavior in the server logging configuration.
 
 == Scaling Policy ==
 
-To scale application according to our needs, we need to create a scaling policy. For our demo case it will be really simple one (similar to the <code>SingleHostScalingPolicy</code> from default JCloudScale policies set), but it will give us some reasonable information on when and how scaling policies are used. In your application you will need to write more sophisticated scaling policies. You can learn how to do this in appropriate [[Documentation#Writing_Scaling_Policies| documentation section]].
+To scale application according to our needs, we need to create a scaling policy. For our demo case it will be really simple one (similar to the <code>SingleHostScalingPolicy</code> from default JCloudScale policies set), but it will give us some reasonable information on when and how scaling policies are used. In your application you will need to write more sophisticated scaling policies. You can learn how to do this in appropriate [[Documentation.wiki#Writing_Scaling_Policies| documentation section]].
 
  
  @XmlRootElement
@@ -255,7 +255,7 @@ For this sample application, we will limit ourselves with '''Local''' JCloudScal
  		(identityPublicURL, tenantName, imageName, login, password))
  	.build();
 
-When this configuration will be used, JCloudScale will operate on [http://www.openstack.org/ Open Stack] virtual machines instead of the local Java virtual machines. In more details this is described in [[Documentation#Local_vs._Cloud_Deployment| documentation]].
+When this configuration will be used, JCloudScale will operate on [http://www.openstack.org/ Open Stack] virtual machines instead of the local Java virtual machines. In more details this is described in [[Documentation.wiki#Local_vs._Cloud_Deployment| documentation]].
 
 The complete source with all discussed configuration-related changes can be found at [[3.Configured.zip| 3.Configured]].
 
@@ -283,7 +283,7 @@ To implement this, let's create new class <code>CachedNumbersSearcher</code> tha
 Note that we have to declare <code>range</code> parameter as passed by value again and annotate our class as <code>@CloudObject</code>. 
 
 Also we should not load cache in the constructor as current version of the JCloudScale executes constructor code on both client and cloud machines. To load it lazily, let's create a helper method:
-
+ 
  private void loadCache()
  {
  	try
@@ -303,7 +303,6 @@ Also we should not load cache in the constructor as current version of the JClou
  					maxCachedPrime = nextPrime;
  			}
  		}
- 
  		System.out.println("Loaded "+cachedPrimes.size()+" prime numbers.");
  	}
  	catch(IOException ex)
@@ -311,7 +310,6 @@ Also we should not load cache in the constructor as current version of the JClou
  		throw new RuntimeException("Failed to load cache", ex);
  	}
  } 
- 
  private List<Long> getCache()
  {
  	if(cachedPrimes == null)
@@ -348,7 +346,7 @@ Now, when we loaded the cache, we have to override isPrime method (don't forget 
  	return true;
  }
 
-Now we came to the main point of this section: in this class we're using an external file, while JCloudScale is completely unaware of that. This will lead to the problem that when this code will be executed on the cloud host, this file won't be available and application will fail with exception. To avoid this, we have to notify JCloudScale to "capture" additional file along with the code. To do this, we add <code>@FileDependency</code> as it is described in [[Documentation#File_Dependencies| documentation]].
+Now we came to the main point of this section: in this class we're using an external file, while JCloudScale is completely unaware of that. This will lead to the problem that when this code will be executed on the cloud host, this file won't be available and application will fail with exception. To avoid this, we have to notify JCloudScale to "capture" additional file along with the code. To do this, we add <code>@FileDependency</code> as it is described in [[Documentation.wiki#File_Dependencies| documentation]].
 
  @CloudObject
  @FileDependency(files = {CachedNumbersSearcher.CACHE_FILE_NAME})
